--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>云课堂</title>
-  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript">
+    document.write("<base href='http://" + document.location.host + "' />");
+  </script>
 </body>
 </html>
